# c-http-server

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  analyze.sh  coverage.sh  main.c  package-lock.json  package.json  playwright.config.js  static.h.in  valgrind.sh
.github/workflows/: ci.yml
certs/: cert.pem  key.pem
include/: db.h  handlers.h  http.h  router.h  security.h  thread_pool.h  tls.h
src/: db.c  handlers.c  http.c  main.c  router.c  security.c  static.h.in  thread_pool.c  tls.c
static/: dashboard.html  index.html
tests/: performance_test.sh  test_db.c  test_e2e.html  test_http.c  test_router.c
tests/e2e/: auth.spec.js  debug.spec.js
tests/k6/: README.md  load_test.js  run_tests.sh  set_baseline.sh  smoke_test.js  stress_test.js
